--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,6 +38,8 @@
     "raspberry-pi-pico.ninjaPath": "${HOME}/.pico-sdk/ninja/v1.12.1/ninja",
     "files.associations": {
         "pio.h": "c",
-        "clocks.h": "c"
+        "clocks.h": "c",
+        "cyw43_arch.h": "c",
+        "bootrom.h": "c"
     }
 }
